--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9"
 pytest = "^5.2"
 pytest-cov = "^2.12.1"
 Sphinx = "^4.1.2"
+Babel = "^2.9.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
