--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytest = "^5.2"
 pytest-cov = "^2.12.1"
 Sphinx = "^4.1.2"
 Babel = "^2.9.1"
+mypy = "^0.910"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
