--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ Sphinx = "^4.1.2"
 Babel = "^2.9.1"
 mypy = "^0.910"
 
+[[tool.mypy.overrides]]
+module = "pytest.*"
+ignore_missing_imports = true
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
