--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,17 +35,18 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest poetry
+        python -m pip install poetry
         python -m poetry config virtualenvs.in-project true
         python -m poetry install
+        python -m poetry run pip install flake8 pytest
     
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 src tests --count --select=E9,F63,F7,F82 --show-source --statistics
+        python -m poetry run flake8 src tests --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 src tests --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        python -m poetry run flake8 src tests --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
     - name: Test with pytest
       run: |
-        pytest
+        python -m poetry run pytest
