--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,13 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.7"
+typing-extensions = { version=">=4.0", python=">=3.6,<3.8" }
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-pytest-cov = "^2.12.1"
-Sphinx = "^4.1.2"
+pytest = "^6.2"
+pytest-cov = "^3.0"
+Sphinx = "^4.3"
 Babel = "^2.9.1"
 mypy = "^0.910"
 
