--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info[:3]))")
 
-    - name: Install dependencies
+    - name: Install and setup poetry
       run: |
         python -m pip install --upgrade pip
         python -m pip install poetry
