--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ ignore_missing_imports = true
 [tool.isort]
 profile = "black"
 
+[tool.pytest.ini_options]
+addopts = "--doctest-modules"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
