--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest = "^6.2"
 pytest-cov = "^3.0"
 Babel = "^2.9.1"
 mypy = "^0.910"
+black = "^22.6.0"
 
 [[tool.mypy.overrides]]
 module = "pytest.*"
